2008-01-14  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.5.
	* plugindata/validate/basic.py: Added translator comments.

2008-01-11  Eitan Isaacson  <eitan@ascender.com>

	* plugindata/validate/Makefile.am: Fixed install path.
	* plugins/event_monitor.py: Added a new global hotkey for
	starting/stopping recording.
	* plugins/validate.glade: Removed Save button, changed layout so
	it won't be so wide. Added label relationships to comobox and label.
	* plugins/validate.py: Removed Save button stuff.

	* plugindata/validate/Makefile.am: 
	* plugindata/Makefile.am: Added missing Makefile.ams.
	

2008-01-10  Peter Parente  <parente@cs.unc.edu>

	* plugins/validate.py
	* plugins/validate.glade
	* plugindata/validate/basic.py: Old code for validate plugin

2007-12-03  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.3.

2007-12-01  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py (IPythonView.__init__): Removed a "print".

	* plugins/ipython_view.py (ConsoleView.onKeyPressExtend): Fixed
	strange bug when trying to extend a superclass's method through a 
	callback (bug #500900).
	
2007-11-13  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.2.
	
2007-11-03  Eitan Isaacson  <eitan@ascender.com>

	* src/accerciser.in: Initialized GDK threading, IPython 0.8.* is
	forcing us to do this because it imports ctypes which enables
	Python threading (bug #469427).
	* plugins/ipython_view.py (ConsoleView): De-coupled all caret
	movement and text manipulation in the ConsoleView from the input
	event handling. Without decoupling we get a lockup if threading
	is enabled when a GAIL callback tries to acquire the lock during a 
	GDK event dispatch.

2007-10-29  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 