@@ -1,3 +1,7 @@
+2008-01-16  Peter Parente  <parente@cs.unc.edu>
+
+	* plugindata/validate/basic.py: Added comments
+
 2008-01-14  Eitan Isaacson  <eitan@ascender.com>
 
 	* NEWS: 
